src/objects/Department_Embellishment__c.object
<CustomObject>
    <fields>
        <fullName>Department_Line_Item__c</fullName>
        <label>Department Line Item</label>
        <referenceTo>Department_Line_Item__c</referenceTo>
        <relationshipLabel>Department Embellishments</relationshipLabel>
        <relationshipName>Department_Embellishments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Embellishment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Embellishment</label>
        <referenceTo>Embellishment__c</referenceTo>
        <relationshipLabel>Department Embellishments</relationshipLabel>
        <relationshipName>Department_Embellishments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Department Embellishment</label>
    <nameField>
        <label>Department Embellishment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Department Embellishments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>